--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1, h2 {
     margin:0 0 0 0;
     height: 100%;
     font-size: 50px;
-    background-image: url(imagess/ted.jpg);
+    background-image: url(imagess/novo.jpg);
     background-repeat: no-repeat;
     border-radius: 0px;
     filter: blur(0);
