--- a/style.css
+++ b/style.css
@@ -58,13 +58,12 @@ h1, h2 {
  
 
 #home  p {
-    padding: 150px;
+    padding: 130px;
     border-radius: 10px;
     font-style: italic;
     margin:0 0 0 0;
-    height: 100%;
     font-size: 50px;
-    background-image: url(imagess/novo.jpg);
+    background-image: url(imagess/ted.jpg);
     background-repeat: no-repeat;
     border-radius: 0px;
     filter: blur(0);
@@ -73,7 +72,8 @@ h1, h2 {
     color: rgb(11, 9, 9);
      height: 450px;;
      display:flex;
-     text-align: left;
+    text-align: start;
+    
    
 }
 
