--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ h1, h2 {
  
 
 #home  p {
-    padding: 130px;
+    padding: 130px 50px;
     border-radius: 10px;
     font-style: italic;
     margin:0 0 0 0;
     font-size: 50px;
-    background-image: url(imagess/ted.jpg);
+    background-image: url(imagess/novo.jpg);
     background-repeat: no-repeat;
     border-radius: 0px;
     filter: blur(0);
