--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1, h2 {
     color: rgb(11, 9, 9);
      height: 450px;;
      display:flex;
-    text-align: start;
+    text-align: center;
     
    
 }
@@ -320,7 +320,7 @@ h1, h2 {
     font-style: italic;
     text-align: center;
     font-size: 50px;
-    background-image: url(imagess/zid.jpg);
+    background-image: url(imagess/plavo.jpg);
     background-repeat: no-repeat;
     filter: blur(0);
     background-size: cover;
