--- a/style.css
+++ b/style.css
@@ -320,8 +320,8 @@ h1, h2 {
     font-style: italic;
     text-align: center;
     font-size: 50px;
-    background-image: url(imagess/zid2.jpg);
-    background-repeat: no-repeat;
+    background-image: url(imagess/plavooo.jpg);
+  
     filter: blur(0);
     background-attachment: fixed;
     background-size: cover;
