--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ h1, h2 {
     font-style: italic;
     text-align: center;
     font-size: 50px;
-    background-image: url(imagess/plavooo.jpg);
+    background-image: url(imagess/n.jpg);
   
     filter: blur(0);
     background-attachment: fixed;
